# assistente-ia-redis-cache

./: assistente_ia_redis_cache_dev.ipynb  pyproject.toml  teste_ollama.py  teste_openai.py
