[project]
name = "assistente-ia-redis-cache"
version = "0.1.0"
description = "Primeiro Projeto"
authors = [
    {name = "f-ia",email = "faguiar.tech@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai (>=2.6.1,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
